# arena-event-praktikum02

./: .gitignore  Arena.py  Arena_game.py  Game.py  Logger.py  MMATIME.py  Persons.py  README.md  Things.py  UnitGenerator.py  arena-event.py  arena.py  arena02_ayztuva.py  arena_an10nimus.py  arena_as.py  arena_code.py  arena_game.py  backoffice.py  characters.py  characters_names.txt  classes.py  combat.py  data.py  editor.py  equipment.py  equipments_names.txt  funcs.py  game.py  game_arena.py  game_engine.py  generate_persons.py  generate_things.py  logic.py  main.py  models.py  mypy.ini  names.yml  names_lists.py  person.py  play.py  (+14 more)
arena/: arena.py  person.py  randomaizer.py
game/: __init__.py  arena.py  descriptors.py
game/person/: __init__.py  paladin.py  person.py  warrior.py
game/tests/person/: test_paladin.py  test_warrior.py
game/tests/thing/: test_thing.py
game/thing/: __init__.py  thing.py
gamers/: __init__.py  settings.py  warrior.py
models/: Person.py  Thing.py  person.py  thing.py
resources/: game.py  game_classes.py  game_constants.py
src/: game_settings.py  oop.py  output.py
tests/: conftest.py  test_combat.py  test_person.py
world/: persons_name  settings.py  texts.py  things.py  things_name_adj  things_name_subj  units.py
