[tool.poetry]
name = "arena_challenge"
version = "0.1.0"
description = "Yandex Praktikum Arena Challenge Game"
authors = ["d.zakharov <kraga2017@.yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
